# MusicPlayerPlus

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CNAME  INSTALL.md  Install  Makefile.am  NOTICE  README.md  TODO  TODO.md  Uninstall  VERSION  _config.yml  asound.conf.tmpl  autogen.sh  browse-artifacts.txt  build  build-essentia.sh  build-gaia.sh  build-mpcplus.sh  build-mppcava.sh  check_inst.sh  clean  configure.ac  copyright  install-dev-env.sh  mkaur  mkdeb  mkdist.sh  mkpkg  mkrelease  mkrpm  mpcplus.desktop  musicplayerplus.desktop  usage.txt
beets/: README.md
config/: README.md  catalog.conf  cava-tmux.conf  config-art.conf  fzmp.conf  mpcplus-art.sh  mpcplus-tmux.yaml  mpprc  mppsplash-dual.sh  tmux-tpm.conf  tmux.conf  xterm-24bit.src
doc/: Makefile.am  bindings  cheat-sheet.md  config  mpcplus-cheatsheet.html  mpcplus.1
docs/: about.md  bindings.md  conf.py  configuration.md  examples.md  gallery.md  history.md  index.md  installation.md  quickstart.md  usage.md
essentia/: VERSION
man/: Makefile.am  README.md
markdown/: README.md  alsa_conf.1.md  artist_to_albumartist.1.md  asciijulia.1.md  asciimpplus.1.md  asciiplasma.1.md  bandcamp-dl.1.md  beet.1.md  beetsconfig.5.md  blissify.1.md  create_playlist.1.md  (+19 more)
mppcava/: Makefile.am  README.md  SHADERS.md  cava.c  config.c  configure.ac
mppcava/cava_win/: INSTALL.txt  README.md  cava_win.sln
mppcava/cava_win/cava/: cava.vcxproj
mppcava/example_files/: config
mppcava/input/: pulse.c  winscap.h
mppcava/output/: sdl_cava.c  sdl_glsl.c
mppcava/output/shaders/: normalized_bars.frag
(+474 files in other folders)
